syntax = "proto3";

package ticktrader.algo.domain;

option csharp_namespace = "TickTrader.Algo.Domain";

import "google/protobuf/wrappers.proto";
import "google/protobuf/any.proto";

import "runtime.feed.proto";

message Metadata {
    enum LineStyle {
        UNKNOWN_LINE_STYLE = 0;
        SOLID = 1;
        DOTS = 2;
        DOTS_RARE = 3;
        DOTS_VERY_RARE = 4;
        LINES_DOTS = 5;
        LINES = 6;
    }

    enum PlotType {
        UNKNOWN_PLOT_TYPE = 0;
        LINE = 1;
        HISTOGRAM = 2;
        POINTS = 3;
        DISCONTINUOUS_LINE = 4;
    }

    enum OutputTarget {
        UNKNOWN_OUTPUT_TARGET = 0;
        OVERLAY = 1;
        WINDOW1 = 2;
        WINDOW2 = 3;
        WINDOW3 = 4;
        WINDOW4 = 5;
    }

    enum MarkerSize {
        UNKNOWN_MARKER_SIZE = 0;
        LARGE = 1;
        MEDIUM = 2;
        SMALL = 3;
    }

    enum PropertyType {
        UNKNOWN_PROPERTY_TYPE = 0;
        PARAMETER = 1;
        INPUT_SERIES = 2;
        OUTPUT_SERIES = 3;
    }

    enum PropertyErrorCode {
        NO_PROPERTY_ERROR = 0;
        UNKNOWN_PROPERTY_ERROR = 1;
        SET_IS_NOT_PUBLIC = 2;
        GET_IS_NOT_PUBLIC = 3;
        MULTIPLE_ATTRIBUTES = 4;
        INPUT_IS_NOT_DATA_SERIES = 5;
        OUTPUT_IS_NOT_DATA_SERIES = 6;
        EMPTY_ENUM = 7;
    }

    enum PluginType {
        UNKNOWN_PLUGIN_TYPE = 0;
        INDICATOR = 1;
        TRADE_BOT = 2;
    }

    enum MetadataErrorCode {
        NO_METADATA_ERROR = 0;
        UNKNOWN_METADATA_ERROR = 1;
        HAS_INVALID_PROPERTIES = 2;
        UNKNOWN_BASE_TYPE = 3;
        INCOMPATIBLE_API_VERSION = 4;
    }

    enum ReductionType {
        UNKNOWN_REDUCTION_TYPE = 0;
        BAR_TO_DOUBLE = 1;
        FULL_BAR_TO_DOUBLE = 2;
        FULL_BAR_TO_BAR = 3;
        QUOTE_TO_DOUBLE = 4;
        QUOTE_TO_BAR = 5;
    }
}

/*message PropertyHeader {
    string id = 1;
    string display_name = 2;
    Metadata.PropertyType property_type = 3;
    Metadata.PropertyErrorCode error_code = 4;
}

message FileFilterEntry {
    string file_type_name = 1;
    string file_mask = 2;
}

message ParameterMetadata {
    PropertyHeader header = 1;
    string data_type = 2;
    string default_value = 3;
    bool is_required = 4;

    bool is_enum = 5;
    repeated string enum_values = 6;

    repeated FileFilterEntry file_filters = 7;
}

message InputMetadata {
    PropertyHeader header = 1;
    string data_series_base_type_full_name = 2;
}

message OutputMetadata {
    PropertyHeader header = 1;
    string data_series_base_type_full_name = 2;
    double default_thickness = 3;
    google.protobuf.Int32Value default_color_argb = 4;
    Metadata.LineStyle default_line_style = 5;
    Metadata.PlotType plot_type = 6;
    Metadata.OutputTarget target = 7;
    int32 precision = 8;
    double zero_line = 9;
    bool visibility = 10;
}

message PluginMetadata {
    string api_version_str = 1;
    string id = 2;
    string display_name = 3;
    Metadata.PluginType type = 4;
    Metadata.MetadataErrorCode error = 5;
    string ui_display_name = 6;
    string category = 7;
    string version = 8;
    string description = 9;
    string copyright = 10;

    repeated ParameterMetadata parameters = 11;
    repeated InputMetadata inputs = 12;
    repeated OutputMetadata outputs = 13;

    bool setup_main_symbol = 14;
}

message ReductionMetadata {
    string api_version_str = 1;
    string id = 2;
    string display_name = 3;
    Metadata.ReductionType type = 4;
}*/

message AccountKey {
    string server = 1;
    string login = 2;
}

enum RepositoryLocation {
    EMBEDDED = 0;
    LOCAL_REPOSITORY = 1;
    LOCAL_EXTENSIONS = 2;
    COMMON_REPOSITORY = 3;
    COMMON_EXTENSIONS = 4;
}

message PackageKey {
    string name = 1;
    RepositoryLocation location = 2;
}

message PluginKey {
    PackageKey package = 1;
    string descriptor_id = 2;
}

message ReductionKey {
    PackageKey package = 1;
    string descriptor_id = 2;
}

message MappingKey {
    ReductionKey primary_reduction = 1;
    ReductionKey secondary_reduction = 2;
}

message BoolParameterConfig {
    string property_id = 1;
    bool value = 2;
}

message Int32ParameterConfig {
    string property_id = 1;
    int32 value = 2;
}

message NullableInt32ParameterConfig {
    string property_id = 1;
    google.protobuf.Int32Value value = 2;
}

message DoubleParameterConfig {
    string property_id = 1;
    double value = 2;
}

message NullableDoubleParameterConfig {
    string property_id = 1;
    google.protobuf.DoubleValue value = 2;
}

message StringParameterConfig {
    string property_id = 1;
    string value = 2;
}

message EnumParameterConfig {
    string property_id = 1;
    string value = 2;
}

message FileParameterConfig {
    string property_id = 1;
    string file_name = 2;
}


message SymbolConfig {
    enum SymbolOrigin {
        ONLINE = 0;
        CUSTOM = 1;
        TOKEN = 2;
    }

    string name = 1;
    SymbolOrigin origin = 2;
}

message QuoteInputConfig {
    string property_id = 1;
    SymbolConfig selected_symbol = 2;
    bool use_l2 = 3;
}

message BarToBarInputConfig {
    string property_id = 1;
    SymbolConfig selected_symbol = 2;
    MappingKey selected_mapping = 3;
}

message BarToDoubleInputConfig {
    string property_id = 1;
    SymbolConfig selected_symbol = 2;
    MappingKey selected_mapping = 3;
}

message QuoteToBarInputConfig {
    string property_id = 1;
    SymbolConfig selected_symbol = 2;
    MappingKey selected_mapping = 3;
}

message QuoteToDoubleInputConfig {
    string property_id = 1;
    SymbolConfig selected_symbol = 2;
    MappingKey selected_mapping = 3;
}

message ColoredLineOutputConfig {
    string property_id = 1;
    bool is_enabled = 2;
    uint32 line_color_argb = 3;
    int32 line_thickness = 4;
    Metadata.LineStyle line_style = 5;
}

message MarkerSeriesOutputConfig {
    string property_id = 1;
    bool is_enabled = 2;
    uint32 line_color_argb = 3;
    int32 line_thickness = 4;
    Metadata.MarkerSize marker_size = 5;
}

message PluginPermissions {
    bool trade_allowed = 1;
    bool isolated = 2;
}

message PluginConfig {
    PluginKey key = 1;
    Feed.Timeframe timeframe = 2;
    SymbolConfig main_symbol = 3;
    MappingKey selected_mapping = 4;
    string instance_id = 5;
    PluginPermissions permissions = 6;
    repeated google.protobuf.Any properties = 7;
}